[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/background 2.png" type="Texture" id=1]
[ext_resource path="res://art/Top UI v 2.png" type="Texture" id=2]
[ext_resource path="res://art/Bottom UI v 2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ice_holder.gd" type="Script" id=5]
[ext_resource path="res://Scripts/locks_holder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/concrete_holder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/slime_holder.gd" type="Script" id=8]

[node name="game_window" type="Node2D" index="0"]

[node name="background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 576.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0

[node name="top_ui" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="bottom_ui" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 932.0
margin_right = 576.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="grid" type="Node2D" parent="." index="3"]

script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2
empty_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5 )
ice_spaces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )
lock_pieces = PoolVector2Array( 3, 1, 4, 1, 3, 8, 4, 8 )
concrete_pieces = PoolVector2Array( 3, 2, 4, 2, 3, 7, 4, 7 )
slime_pieces = PoolVector2Array( 3, 3, 4, 3, 3, 6, 4, 6 )

[node name="ice_holder" type="Node2D" parent="." index="4"]

script = ExtResource( 5 )

[node name="locks_holder" type="Node2D" parent="." index="5"]

script = ExtResource( 6 )

[node name="concrete_holder" type="Node2D" parent="." index="6"]

script = ExtResource( 7 )

[node name="slime_holder" type="Node2D" parent="." index="7"]

script = ExtResource( 8 )
_sections_unfolded = [ "Pause" ]

[node name="destroy_timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="collapse_timer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="refill_timer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="damage_concrete" from="grid" to="concrete_holder" method="_on_grid_damage_concrete"]

[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]

[connection signal="damage_locks" from="grid" to="locks_holder" method="_on_grid_damage_locks"]

[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]

[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]

[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]

[connection signal="make_locks" from="grid" to="locks_holder" method="_on_grid_make_locks"]

[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]

[connection signal="remove_lock" from="locks_holder" to="grid" method="_on_locks_holder_remove_lock"]

[connection signal="remove_concrete" from="concrete_holder" to="grid" method="_on_concrete_holder_remove_concrete"]

[connection signal="make_slime" from="slime_holder" to="grid" method="_on_slime_holder_make_slime"]

[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]

[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]

[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]

[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]


